--- a/3.html
+++ b/3.html
@@ -5,23 +5,25 @@
 <head>
     <title>WEB1 - javaScript</title>
     <meta charset="utf-8">
+    <link rel="stylesheet" href="style.css">
 </head>
 
 
 <body> <!--본문은 바디라는 태그로 묶기로 약속함.-->
     <h1><a href = "index.html">WEB</a></h1>
-    <ol><!--ol, ul과 li는 항상 같이사용-->
-        <li><a href ="1.html">HTML</a></li>
-        <li><a href ="2.html">CSS</a></li>
-        <li><a href ="3.html">JavaScript</a></li>
-    </ol>
+    <div id="grid">
+        <ol><!--ol, ul과 li는 항상 같이사용-->
+            <li><a href ="1.html">HTML</a></li>
+            <li><a href ="2.html">CSS</a></li>
+            <li><a href ="3.html">JavaScript</a></li>
+        </ol>
 
+        <div id="article">
+            <h2>javaScript</h2>
+                <p>javascript 설명하는내용</p>
+        </div>
 
-    <h2>javaScript</h2>
-        <p>javascript 설명하는내용</p>
-
-
-    <img src="codecode.jpg" width="300px" height = "300px">
+    </div>
 </body>
 
 </html>
