--- a/1.html
+++ b/1.html
@@ -5,29 +5,32 @@
 <head>
     <title>WEB1 - html</title>
     <meta charset="utf-8">
+    <link rel="stylesheet" href="style.css">
 </head>
 
 
 <body> <!--본문은 바디라는 태그로 묶기로 약속함.-->
     <h1><a href = "index.html">WEB</a></h1>
-    <ol><!--ol, ul과 li는 항상 같이사용-->
-        <li><a href ="1.html">HTML</a></li>
-        <li><a href ="2.html">CSS</a></li>
-        <li><a href ="3.html">JavaScript</a></li>
-    </ol>
+    <div id="grid">
+        <ol><!--ol, ul과 li는 항상 같이사용-->
+            <li><a href ="1.html">HTML</a></li>
+            <li><a href ="2.html">CSS</a></li>
+            <li><a href ="3.html">JavaScript</a></li>
+        </ol>
 
-
-    <h2>HTML</h2>
-    <a href = "https://www.w3.org/TR/html52/" 
-    target = "_blank" title = "html5 specification">
-    <!--href-링크주소, target.blank= 새 탭에서 열기 , title=링크설명-->
-    Hypertext Markup Language (HTML)</a> is the standard Markup
-    language for <strong>creating <u>web</u> pages</strong>
-    and web applications.
-    <p>asdasdwjekdjalsjdqwiodadklsa</p><!--<p>는 문단나눌때 사용-->
-
-
-    <img src="codecode.jpg" width="300px" height = "300px">
+        <div id="article">    
+            <h2>HTML</h2>
+            <a href = "https://www.w3.org/TR/html52/"  
+            target = "_blank" title = "html5 specification">
+            <!--href-링크주소, target.blank= 새 탭에서 열기 , title=링크설명-->
+            Hypertext Markup Language (HTML)</a> is the standard Markup
+            language for <strong>creating <u>web</u> pages</strong>
+            and web applications.
+            <p>asdasdwjekdjalsjdqwiodadklsa</p><!--<p>는 문단나눌때 사용-->
+        </div>
+    <!--disqus = 댓글기능 추가해주는 사이트, tawk = 방문자와 채팅하게해주는 사이트.
+        analytics.google.com = 방문자 분석할수있음-->
+    </div>
 </body>
 
 </html>
